--- a/kwitansi_admin.html
+++ b/kwitansi_admin.html
@@ -24,8 +24,8 @@
                 "tableName": "kwitansi"
             },
             "urls": {
-                "detailBase": "https://lidan.co.id/sign/kwitansi.html",
-                "printBase": "https://cipta.my.id/sign/kwitansi_hard"
+                "detailBase": "https://sign.lidan.co.id/kwitansi.html",
+                "printBase": "https://kwitansi.lidan.co.id/kwitansi_hard"
             },
             "ui": {
                 "title": "Admin Kwitansi Lidan",
