--- a/index.html
+++ b/index.html
@@ -310,5 +310,6 @@
         // Jalankan saat startup
         loadData();
     </script>
+    <script src="https://login.lidan.co.id/login_admin.js"></script>
 </body>
 </html>
